--- a/css/analog.css
+++ b/css/analog.css
@@ -26,7 +26,7 @@ body {
     max-width: 940px;
     margin: 10px auto;
     padding: 20px;
-    border: 1px solid #000;
+    border: 2px solid #000;
     background-color: #D6D3D3;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -40,8 +40,12 @@ body {
     border: 2px solid rgb(48, 46, 46);
     box-shadow: 5px 15px 12px;
     border-radius: 5px;
+    transition: transform 0.3s;
 }
 
+#logo img:hover {
+    transform: scale(1.1);
+}
 
 ul {
     list-style: none;
@@ -75,6 +79,8 @@ p img {
     margin-top: 50px;
     margin-bottom: 100px;
     transition: transform 0.5s;
+    box-shadow: 5px 15px 12px;
+    border-radius: 8px;
 }
 
 p img:last-child {
